crates/tlang_codegen_js/tests/snapshots/hir_js_pass__nested_complex_expressions.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_IF_ELSE__("$tmp$0", if true {
        __TEMP_VAR_BLOCK__("$tmp$1", {
            let a: unknown = 1;
            ($tmp$1 = (a + 2));
        });
        ($tmp$0 = $tmp$1);
    } else {
        __TEMP_VAR_BLOCK__("$tmp$2", {
            let b: unknown = 3;
            ($tmp$2 = (b * 2));
        });
        ($tmp$0 = $tmp$2);
    });
    let x: unknown = $tmp$0;
    x
}
