crates/tlang_codegen_js/tests/snapshots/hir_js_pass__return_statement_flattening.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let x: unknown = 1;
        ($tmp$0 = (x + 2));
    });
    return $tmp$0;
}
