crates/tlang_codegen_js/tests/snapshots/hir_js_pass__short_circuit_operators_special_handling.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let a: unknown = true;
        ($tmp$0 = a);
    });
    if $tmp$0 {
        __TEMP_VAR_BLOCK__("$tmp$2", $tmp$3);
        ($tmp$1 = $tmp$2);
    } else {
        ($tmp$1 = $tmp$0);
    };
    let x: unknown = $tmp$1;
    x
}
