crates/tlang_codegen_js/tests/snapshots/hir_js_pass__simple_expression_no_transformation.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    let x: unknown = (1 + 2);
    x
}
