crates/tlang_codegen_js/tests/snapshots/hir_js_pass__temp_var_generation.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let x: unknown = 1;
        ($tmp$0 = (x + 1));
    });
    let a: unknown = $tmp$0;
    __TEMP_VAR_BLOCK__("$tmp$1", {
        let y: unknown = 2;
        ($tmp$1 = (y + 2));
    });
    let b: unknown = $tmp$1;
    __TEMP_VAR_BLOCK__("$tmp$2", {
        let z: unknown = 3;
        ($tmp$2 = (z + 3));
    });
    let c: unknown = $tmp$2;
    ((a + b) + c)
}
