crates/tlang_codegen_js/tests/snapshots/hir_js_pass__ternary_operator_preservation.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    let x: unknown = if true {
        1
    } else {
        2
    };
    x
}
