crates/tlang_codegen_js/tests/snapshots/hir_js_pass__unary_expression_flattening.snap
---
source: crates/tlang_codegen_js/tests/hir_js_pass.rs
expression: pretty_print(&hir)
---
fn main() -> unknown {
    __TEMP_VAR_BLOCK__("$tmp$0", {
        let a: unknown = true;
        ($tmp$0 = a);
    });
    let x: unknown = !$tmp$0;
    x
}
